--- a/src/components/Hompage.css
+++ b/src/components/Hompage.css
@@ -1,6 +1,40 @@
-body {
-  background-color: #c9e2c6;
+@keyframes changeBg {
+  0% {
+    background-image: url("../assets/6197cb736f457d0018cd5dfa.webp");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+  }
+  25% {
+    background-image: url("../assets/87187495_2732122700170082_3281268363178803200_o.jpg");
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+  }
+  50% {
+    background-image: url("../assets/publix3_1200xx2000-1125-0-104.jpg");
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+  }
+  75% {
+    background-image: url("../assets/6197cb736f457d0018cd5dfa.webp");
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+  }
+  100% {
+    background-image: url("../assets/publix3_1200xx2000-1125-0-104.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+  }
 }
+
+body {
+  animation: changeBg 20s infinite;
+}
+
 .container {
   display: flex;
   position: absolute;
@@ -12,13 +46,14 @@ body {
   align-items: center;
   height: 100vh;
   max-width: 768px;
+  bottom: 0;
 }
 .logo {
   width: 100%;
   text-align: center;
 }
 img {
-  width: 50%;
+  width: 100%;
   height: auto;
 }
 h1 {
@@ -26,10 +61,9 @@ h1 {
   color: #0b6138;
 }
 .search-form {
-  background-color: white;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px #888888;
+
   width: 100%;
 }
 .center {
@@ -41,7 +75,8 @@ input[type="text"] {
   box-sizing: border-box;
   border: 2px solid #0b6138;
   border-radius: 4px;
-  width: 80%;
+  width: 18%;
+  top: 0;
 }
 button {
   width: 80%;
@@ -52,7 +87,76 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  display: none;
 }
-button:hover {
+
+.product-card {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+
+  width: 50%;
+  margin: 50px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  left: 50%;
+}
+
+.product-title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.product-price {
+  text-align: center;
+}
+
+.product-img {
+  width: 100%;
+  margin-top: auto;
+  margin-left: auto;
+}
+
+.ProductPage {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.product-card {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.footer {
   background-color: #0a532a;
+  height: 100px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  color: white;
+}
+.footer h1 {
+  font-size: 20px;
+  color: white;
+  text-align: center;
+  top: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.form-f {
+  bottom: 0;
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  right: 0;
 }
