--- a/src/components/Hompage.css
+++ b/src/components/Hompage.css
@@ -136,8 +136,8 @@ button {
 .footer {
   background-color: #0a532a;
   height: 100px;
-  width: 100%;
-  position: fixed;
+  width: 102%;
+  position: absolute;
   bottom: 0;
   text-align: center;
   display: flex;
