--- a/src/components/Hompage.css
+++ b/src/components/Hompage.css
@@ -161,3 +161,38 @@ button {
   left: 0;
   right: 0;
 }
+.product-card {
+  width: 40%;
+  height: 40%;
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border-radius: 10px;
+  text-align: center;
+  padding: 20px;
+}
+
+.product-card h1 {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.product-card p {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+  border-radius: 10px 10px 0 0;
+}
+
+.product-price-total {
+  font-weight: bold;
+}
